--- a/src/app/views/shared/settings-section/styles.scss
+++ b/src/app/views/shared/settings-section/styles.scss
@@ -6,16 +6,17 @@
             padding: 24px 16px;
             
             border-radius: 4px;
-            border: 1px solid var(--default-border-color);
+            border: 1px solid rgba(0, 0, 0, .085);
             cursor: pointer;
             background-color: var(--default-bg);
             
             overflow: hidden;
             user-select: none;
+            transition: opacity .15s ease-in-out;
 
             &:hover {
                 background-color: transparent;
-                background-image: var(--default-gradient);
+                background-image: var(--contrast-gradient);
 
                 .sectionContent {
                     span { opacity: 1; }
@@ -34,12 +35,13 @@
             }
 
             &Title {
-                border-bottom: 1px solid var(--default-border-color);
                 font-size: 1em;
                 letter-spacing: 1px;
 
                 svg {
                     width: 18px;
+                    
+                    margin: 0 calc(var(--base-pm) / 2);
 
                     color: var(--default-color-hover);
                     opacity: .85;
@@ -63,6 +65,11 @@
 
             &Disabled {
                 opacity: .5;
+                pointer-events: none;
+            }
+
+            &Hidden {
+                opacity: 0;
                 pointer-events: none;
             }
         }
